--- a/forms/epicor_20part_properties.xml
+++ b/forms/epicor_20part_properties.xml
@@ -229,7 +229,7 @@
     <StyleName>Default</StyleName>
   </StyleAndSkinName>
   <AllowCustomization>true</AllowCustomization>
-  <PredefinedButtons>OkCancelApply</PredefinedButtons>
+  <PredefinedButtons>OkCancel</PredefinedButtons>
   <Modal>false</Modal>
   <ItemBordersVisible>false</ItemBordersVisible>
   <IsLauncherPage>false</IsLauncherPage>
