Make null species warning modal
Calling forms from iLogic is very wonky. In this case, it tried
retrieving the form button result before the form was actually closed.
Setting the FormMode as Modal forces the calling rule to block until the
form itself resolves

--- a/forms/epicor_13launch_species.state.xml
+++ b/forms/epicor_13launch_species.state.xml
@@ -5,7 +5,8 @@
     <Height>0</Height>
   </Size>
   <Location>
-    <X>0</X>
-    <Y>0</Y>
+    <X>605</X>
+    <Y>341</Y>
   </Location>
+  <SplitterLocations />
 </FormStatePersist>
