--- a/forms/species_20select.xml
+++ b/forms/species_20select.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FormSpecification xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <Name>20species_select</Name>
+  <Name>species_20select</Name>
   <Font>
     <Size>0</Size>
     <Bold>false</Bold>
