Manually change button action
Inventor's form editor doesn't offer options for the action to take when
clicking a button to run an external rule, but the property still exists
in the XML. Making a temporary internal rule and changing its run
options in the form lets you copy the value that corresponds to the
different actions!

--- a/forms/epicor_13launch_species.xml
+++ b/forms/epicor_13launch_species.xml
@@ -45,7 +45,7 @@
       </Image>
       <TextVisible>true</TextVisible>
       <RuleName>species_master</RuleName>
-      <RuleButtonBehavior>RunRule</RuleButtonBehavior>
+      <RuleButtonBehavior>CloseAndRunRule</RuleButtonBehavior>
       <Path>species_master.vb</Path>
     </UiElementSpec>
   </Items>
