--- a/forms/species_30partnum.xml
+++ b/forms/species_30partnum.xml
@@ -14,7 +14,17 @@
   <ContentsTextLocation>Left</ContentsTextLocation>
   <Items>
     <UiElementSpec xsi:type="LabelSpec">
-      <Name>Format: ZZ-###</Name>
+      <Name>Format (Part): ZZ-###</Name>
+      <Font>
+        <FamilyName />
+        <Size>0</Size>
+        <Bold>false</Bold>
+        <Italic>false</Italic>
+      </Font>
+    </UiElementSpec>
+    <UiElementSpec xsi:type="LabelSpec">
+      <Name>Format (Material): MX-ZZ-###</Name>
+      <ToolTip>Valid X values: L (Lumber), H (Hardware), F (Finishes), T (Turned), B (Bends), P (Plywood)</ToolTip>
       <Font>
         <FamilyName />
         <Size>0</Size>
