Start pulling quoting module together
Add additional required parameters, make requisite changes to the form,
and call the data entry form from the main rule

--- a/forms/quoting_20field_entry.xml
+++ b/forms/quoting_20field_entry.xml
@@ -254,6 +254,7 @@ In order to sell into publc buildings, most agencies have adopted this Califiorn
         <Bold>false</Bold>
         <Italic>false</Italic>
       </Font>
+      <EnablingParameterName>FalseParam</EnablingParameterName>
       <TextLocation>Left</TextLocation>
       <ReadOnly>false</ReadOnly>
       <AlwaysReadOnly>false</AlwaysReadOnly>
