Fix typo and adjust form read-only fields
Typo in quoting required field dict; made quoting spreadsheet field in
form read-only, so it can only be set via browsing for a spreadsheet

--- a/forms/quoting_20field_entry.xml
+++ b/forms/quoting_20field_entry.xml
@@ -23,7 +23,7 @@
         <Italic>false</Italic>
       </Font>
       <TextLocation>Top</TextLocation>
-      <ReadOnly>false</ReadOnly>
+      <ReadOnly>true</ReadOnly>
       <AlwaysReadOnly>false</AlwaysReadOnly>
       <ParameterName>QuotingSpreadsheet</ParameterName>
       <EditControlType>TextBox</EditControlType>
@@ -287,9 +287,9 @@ In order to sell into publc buildings, most agencies have adopted this Califiorn
         <Bold>false</Bold>
         <Italic>false</Italic>
       </Font>
-      <EnablingParameterName>FalseParam</EnablingParameterName>
+      <EnablingParameterName />
       <TextLocation>Left</TextLocation>
-      <ReadOnly>false</ReadOnly>
+      <ReadOnly>true</ReadOnly>
       <AlwaysReadOnly>false</AlwaysReadOnly>
       <ParameterName>WoodSpecies</ParameterName>
       <EditControlType>TextBox</EditControlType>
